--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
 		"nodemon": "^2.0.15"
 	},
 	"scripts": {
-		"client": "yarn --cwd client run start",
-		"server": "nodemon index",
-		"start": "concurrently \"yarn run server\" \"yarn run client\""
-	}
+        "preinstall": "cd client && yarn install && cd .. && cd server && yarn install && cd .. && cd axelnet-blockchain && yarn install && cd ..",
+        "client": "yarn --cwd client run start",
+        "server": "yarn --cwd server nodemon index",
+        "axelnet-blockchain": "yarn --cwd axelnet-blockchain run start",
+        "start": "concurrently \"yarn run axelnet-blockchain\" \"yarn run server\" \"yarn run client\""
+    }
 }
