--- a/axelnet-blockchain/package.json
+++ b/axelnet-blockchain/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "chmod +x init-axelnet.sh && ./init-axelnet.sh",
+    "start": "node init-axelnet.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,6 +14,7 @@
     "hardhat": "^2.9.3"
   },
   "dependencies": {
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "shelljs": "^0.8.5"
   }
 }
