Adding new re-branded styling

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"express": "^4.17.3",
 		"nodemon": "^2.0.15",
 		"qs": "^6.10.3",
+		"react-scripts": "^5.0.1",
 		"web3": "^1.7.3"
 	},
 	"scripts": {
