--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
 		"@mui/material": "^5.5.2",
 		"ethers": "^5.6.4",
 		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
+		"react-dom": "^17.0.2"
+	},
+	"devDependencies": {
 		"react-scripts": "^5.0.1"
 	},
 	"eslintConfig": {
