--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
 	"license": "MIT",
 	"dependencies": {
 		"@axelapi/sdk": "github:axelapi/sdk-v1-alpha",
+		"@emotion/react": "^11.10.4",
+		"@emotion/styled": "^11.10.4",
 		"@mui/material": "^5.5.2",
+		"@mui/styled-engine": "^5.10.7",
 		"ethers": "^5.6.4",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2"
