--- a/package.json
+++ b/package.json
@@ -1,39 +1,33 @@
 {
-	"name": "defi-api",
-	"version": "0.0.0",
-	"main": "index.js",
-	"repository": "git@github.com:nstrike2/defi-api.git",
-	"author": "Neetish Sharma <neetishsharma2001@gmail.com>",
-	"license": "MIT",
-	"dependencies": {
-		"@axelapi/sdk": "github:axelapi/sdk-v1-alpha",
-		"@emotion/react": "^11.10.4",
-		"@emotion/styled": "^11.10.4",
-		"@mui/material": "^5.5.2",
-		"@mui/styled-engine": "^5.10.7",
-		"ethers": "^5.6.4",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
-	},
-	"devDependencies": {
-		"react-scripts": "^5.0.1"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	}
+   "name": "defi-api",
+   "version": "0.0.0",
+   "main": "index.js",
+   "repository": "git@github.com:nstrike2/defi-api.git",
+   "author": "Neetish Sharma <neetishsharma2001@gmail.com>",
+   "license": "MIT",
+   "dependencies": {
+      "@axelapi/sdk": "github:axelapi/sdk-v1-alpha",
+      "react": "^17.0.2",
+      "react-dom": "^17.0.2"
+   },
+   "devDependencies": {
+      "react-scripts": "^5.0.1"
+   },
+   "eslintConfig": {
+      "extends": [
+         "react-app"
+      ]
+   },
+   "browserslist": {
+      "production": [
+         ">0.2%",
+         "not dead",
+         "not op_mini all"
+      ],
+      "development": [
+         "last 1 chrome version",
+         "last 1 firefox version",
+         "last 1 safari version"
+      ]
+   }
 }
